# merlin

./: TODO  browse.ml  chunk.ml  chunk.mli  command.ml  error_report.ml  history.ml  log.txt
emacs/: merlin-core.el
parsing/: location.ml
src/analysis/: dune  locate.ml
src/dot-merlin/dot-protocol/: dot_protocol.ml  dune
src/extend/: dune  extend_main.ml
src/frontend/: dune  query_commands.ml
src/kernel/: dune  mconfig.ml  mconfig.mli  mconfig_dot.ml  mconfig_dot.mli  mocaml.ml  mppx.ml  mreader_lexer.mli  mreader_parser.mli  mtyper.ml
src/ocaml/driver/: pparse.ml
src/ocaml/merlin_specific/: dune  typer_raw.ml
src/ocaml/parsing/: ast_mapper.ml  builtin_attributes.ml  docstrings.ml  dune  location.ml  location.mli  printast.ml
src/ocaml/preprocess/: dune  lexer_raw.mll  menhirLib.ml  menhirLib.mli  parser_raw.ml  parser_raw.mli  parser_raw.mly
src/ocaml/typing/: btype.ml  cmi_format.ml  cmt_format.ml  ctype.ml  dune  env.ml  env.mli  ident.ml  ident.mli  includemod.ml  magic_numbers.ml  msupport.ml  msupport.mli  mtype.ml  parmatch.ml  persistent_env.ml  persistent_env.mli  printtyp.ml  printtyped.ml  short_paths_graph.ml  stypes.ml  subst.ml  typeclass.ml  typecore.ml  typedecl.ml  typedecl_separability.ml  typemod.ml  types.ml  types.mli  typetexp.ml
src/ocaml/utils/: dune
src/utils/: dune
tests/test-dirs/locate/in-generated-file.t/: run.t
typing/: typetexp.ml
utils/: misc.ml  misc.mli
vim/autoload/: merlin.py  merlin.vim
