(library
 (name      query_protocol)
 (public_name merlin.query_protocol)
 (modules   query_protocol)
 (flags -open Merlin_utils)
 (libraries merlin_kernel merlin_utils parsing))

(library
 (name      query_commands)
 (public_name      merlin.query_commands)
 (modules   query_commands)
 (flags -open Merlin_utils -open Merlin_analysis -open Utils)
 (libraries
  merlin_utils
  merlin_kernel
  utils
  parsing
  typing
  merlin_specific
  config
  merlin_analysis
  query_protocol))
